static/style.css
body {
    font-family: Helvetica, sans-serif;
    margin: 20px;
    background-color: #f4f4f4;
}
.search-container {
    display: flex;
    justify-content: space-between;
    margin-bottom: 20px;
}
input[type="text"] {
    flex-grow: 1;
    margin-right: 10px;
    padding: 10px;
    font-size: 16px;
    border: 2px solid #ccc;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}
button {
    padding: 10px 20px;
    background-color: #4CAF50;
    color: white;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}
#searchBox {
    flex-grow: 1;
    margin-right: 10px;
    padding: 10px;
    font-size: 16px;
    border: 2px solid #ccc;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}
#contributeButton {
    padding: 10px 20px;
    background-color: #4CAF50;
    color: white;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}
.stats, #standard {
    margin-top: 20px;
    background: white;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
}
.old-link {
    padding: 10px 20px;
    background-color: #4285F4;
    color: white;
    text-decoration: none;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    display: inline-block;
}
.note {
    padding: 10px;
    background-color: #fff8e1;
    border-left: 4px solid #ffc107;
    margin-top: 10px;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
    font-size: 14px;
}
.highlight {
    background-color: yellow;
}

